Fixed mobile nav spacing issues

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -123,18 +123,22 @@
         font-size: 30px;
         font-family: "Lato";
         width: 100%; 
-        height: 400px;
+        height: 365px;
+    }
+
+    .mobile-nav-list {
+        margin: 0px 0px 15px 0px;
     }
 
     .mobile-nav-item {
         padding: 0px 0px 15px 0px;
     }
 
-.mobile-nav-button-container {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
+    .mobile-nav-button-container {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
 
     .mobile-nav-button {
         color: white;
