--- a/src/pages/Blog.css
+++ b/src/pages/Blog.css
@@ -1,5 +1,16 @@
-.individual-blog-container {
-    text-align: center;
-    margin-top: 180px;
-    font-family: 'Italiana';
+
+@media only screen and (min-width: 768px) {
+    .individual-blog-container {
+        text-align: center;
+        margin: 180px 0px 80px 0px;
+        font-family: 'Italiana';
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .individual-blog-container {
+        text-align: center;
+        margin: 100px 0px 80px 0px;
+        font-family: 'Italiana';
+    }
 }
